[gd_scene load_steps=9 format=3 uid="uid://bqfo7kgkgluc7"]

[ext_resource type="Script" uid="uid://blad5pffa1c6l" path="res://stats_page.gd" id="1_qkx3n"]
[ext_resource type="PackedScene" uid="uid://ktyytpt4o3vi" path="res://quit.tscn" id="2_74t8q"]

[sub_resource type="Gradient" id="Gradient_74t8q"]
offsets = PackedFloat32Array(0, 0.987013)
colors = PackedColorArray(4.95386e-05, 0.0920408, 0.353595, 0.478431, 0.397701, 0.00018126, 0.426762, 0.305882)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_adv4l"]
gradient = SubResource("Gradient_74t8q")
fill_from = Vector2(0.440367, 0.366972)
fill_to = Vector2(0.509174, 0.995413)

[sub_resource type="LabelSettings" id="LabelSettings_74t8q"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_adv4l"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_tgj6n"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_r4or0"]
font_size = 40

[node name="stats_page" type="Node2D"]
script = ExtResource("1_qkx3n")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 721.0
offset_bottom = 1298.0
texture = SubResource("GradientTexture2D_adv4l")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 104.0
offset_top = 289.0
offset_right = 600.0
offset_bottom = 998.0
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Text"
label_settings = SubResource("LabelSettings_74t8q")
autowrap_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_adv4l")

[node name="Label3" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tgj6n")

[node name="Label4" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_r4or0")

[node name="Label5" type="Label" parent="CanvasLayer/TextureRect/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_r4or0")

[node name="Node2D" parent="CanvasLayer" instance=ExtResource("2_74t8q")]
z_index = 1
